<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="left"
            android:text="@string/txtTitulo"
        />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnGuardarColor"
            android:textColor="@color/textcolor"
            android:textSize="10dp"
            android:layout_marginLeft="270dp"
            android:text="@string/btnGuardar"
        />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/txtNombre"
        />
        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/txtApellido"
        />
        <EditText
            android:id="@+id/txtNumTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLength="16"
            android:inputType="number"
            android:hint="@string/txtNumTarjeta"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp">

        <EditText
            android:id="@+id/txtMes"
            android:maxLength="2"
            android:inputType="number"
            android:layout_width="120dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/txtMes"
        />
        <EditText
        android:id="@+id/txtano"
        android:maxLength="4"
        android:inputType="number"
        android:gravity="center"
        android:layout_width="120dp"
        android:layout_marginLeft="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtAno"
        />
        <EditText
            android:id="@+id/txtCodigo"
            android:maxLength="3"
            android:inputType="number"
            android:gravity="center"
            android:layout_width="130dp"
            android:layout_marginLeft="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/txtCodigo"
        />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/txtDireccion"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp">

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtCalle"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp">

        <EditText
            android:id="@+id/txtCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtCiudad"
        />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp">

        <EditText
            android:id="@+id/txtEstado"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/txtEstado"
        />
        <EditText
            android:id="@+id/txtCodPostal"
            android:layout_marginLeft="190dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/txtCodPostal"
        />
    </RelativeLayout>
</RelativeLayout>